fix formItem vertical align

--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -235,7 +235,7 @@
 // ---
 @label-required-color        : @highlight-color;
 @label-color                 : @heading-color;
-@form-item-margin-bottom     : 32px;
+@form-item-margin-bottom     : 24px;
 @form-item-trailing-colon    : true;
 @form-vertical-label-padding : 0 0 8px;
 @form-vertical-label-margin  : 0;
